# Csharp-Lexer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lexer.cpp  lexer.h  main.cpp  run.sh  test.sh  token.cpp  token.h  utils.h
.github/workflows/: cmake.yml
input/: code100.cs  code101.cs
output/: code02.html  code08.html  code14.html  code18.html  code20.html  code32.html  code35.html  code38.html  code53.html  code59.html  code61.html  code69.html  code71.html  code83.html  code87.html  code89.html  code94.html
outputParallel/: code01.html  code02.html  code03.html  code04.html  code05.html  code06.html  code07.html  code08.html  code09.html  code10.html  code100.html  code11.html  code12.html  code13.html  code14.html  code15.html  code16.html  code18.html  code19.html  code20.html  code21.html  code22.html  code24.html  code25.html  code26.html  code27.html  code28.html  code29.html  code30.html  code31.html  code32.html  code33.html  code34.html  code35.html  code36.html  code37.html  code38.html  code39.html  code40.html  code41.html  (+57 more)
outputSingle/: code02.html  code03.html  code04.html  code05.html  code06.html  code07.html  code08.html  code09.html  code10.html  code100.html  code11.html  code12.html  code13.html  code14.html  code15.html  code16.html  code18.html  code19.html  code20.html  code21.html  code22.html  code23.html  code24.html  code25.html  code26.html  code27.html  code28.html  code29.html  code30.html  code31.html  code32.html  code33.html  code34.html  code35.html  code36.html  code37.html  code38.html  code39.html  code40.html  code41.html  (+58 more)
src/: csharp_language.h  lexer.cpp  lexer.h  main.cpp  single.cpp  token.cpp  token.h  utils.h
src/lexer/: lexer.cpp  lexer.h
src/modules/: utils.ixx
src/styles/: styles.css
src/tests/: token_test.cpp
src/threads/: thread_pool.cpp  thread_pool.h
src/token/: token.cpp  token.h
tests/: lexer_test.cpp  lexer_test.h  test.cs  token_test.cpp  token_test.h
